# transcription-search-api

./: Cargo.toml  README.md  data.db  schema.sql
src/: api.rs  db.rs  file_parser.rs  lib.rs  main.rs  models.rs
