[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-web-actors = "4.2"
actix = "0.13"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
regex = "1"
walkdir = "2"
zip = "2.6"
uuid = { version = "1.4", features = ["v4", "serde"] }
sanitize-filename = "0.6"
once_cell = "1.8"
lazy_static = "1.4"
dotenv = "0.15.0"
tokio-stream = "0.1.17"

[lib]
name = "backend"
path = "src/lib.rs"
